fixed some UI and made day cards collapsed when opened in mobile

--- a/frontend/src/css/ActivityCard.css
+++ b/frontend/src/css/ActivityCard.css
@@ -5,6 +5,7 @@
 }
 
 .activity-container {
+    margin-top: 8px;
     position: relative;
     background-color: #ffffff;
     border-radius: 10px;
